--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -41,6 +41,12 @@
             android:id="@+id/action_logout"
             android:icon="@drawable/ic_exit_to_app_white_24dp"
             android:title="Logout" />
+
+        <item
+            android:id="@+id/action_home_fragment_dest_to_favoriteComicsFragment"
+            android:icon="@drawable/ic_favorite_white_24dp"
+            android:title="Favorite comics"
+            android:visible="false" />
     </group>
 
     <item android:title="Communicate">
