Move class ComicArg from home package to detail package

--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -54,7 +54,7 @@
 
         <argument
             android:name="comic"
-            app:argType="com.hoc.comicapp.ui.home.ComicArg"
+            app:argType="com.hoc.comicapp.ui.detail.ComicArg"
             app:nullable="false" />
 
         <argument
