cache request + motion

--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -11,11 +11,7 @@
 
         <action
             android:id="@+id/action_home_fragment_dest_to_comicDetailFragment"
-            app:destination="@id/comicDetailFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right" />
+            app:destination="@id/comicDetailFragment" />
 
         <action
             android:id="@+id/action_home_fragment_dest_to_loginFragment"
