--- a/app/src/main/res/layout/fragment_comic_detail_end.xml
+++ b/app/src/main/res/layout/fragment_comic_detail_end.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    app:showPaths="false">
+    app:showPaths="false"
+    tools:viewBindingIgnore="true">
 
 
     <View
@@ -35,11 +36,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:scaleType="fitXY"
-        tools:src="@drawable/splash_background"
         app:layout_constraintDimensionRatio="H,2:3"
         app:layout_constraintEnd_toEndOf="@id/guideline"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/splash_background" />
 
     <TextView
         android:id="@+id/text_title"
@@ -184,8 +185,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:checked="true"
-        android:gravity="start"
         android:fontFamily="@font/google_sans"
+        android:gravity="start"
         android:text="Offline/Online mode"
         android:textSize="13sp"
         android:visibility="gone" />
